# parallel-k-means

./: .gitignore  CMakeLists.txt  LICENSE  README.md
datasets/: letter.txt  rand_dataset_10000x10.txt  rand_dataset_1000x10.txt  rand_dataset_1000x100.txt  wdbc.txt
report/: report.tex
src/: Point.h  cuda_kmeans.cu  cuda_kmeans.cuh  kmeans_cuda.cu  kmeans_cuda.cuh  kmeans_openmp.cpp  kmeans_openmp.h  openmp2_kmeans.cpp  openmp2_kmeans.h  openmp_kmeans.cpp  openmp_kmeans.h  point.h  sequential_kmeans.cpp  sequential_kmeans.h  test.cpp
